Implementa logica de deteccao de fraude v1